# prov

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.codex/: hooks.json
.github/: dependabot.yml
.github/workflows/: ci.yml
action/: action.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
action/__tests__/: download.test.ts  github.test.ts  timeline.test.ts
action/src/: download.ts  github.ts  index.ts  timeline.ts
agent-hooks/: README.md
codex/hooks/: hooks.json
crates/prov-cli/: Cargo.toml
crates/prov-cli/src/: anthropic.rs  main.rs
crates/prov-cli/src/commands/: backfill.rs  common.rs  fetch.rs  gc.rs  hook.rs  install.rs  log.rs  mark_private.rs  mod.rs  notes_resolve.rs  pr_timeline.rs  push.rs  redact_history.rs  regenerate.rs  reindex.rs  repair.rs  search.rs  uninstall.rs
crates/prov-cli/src/render/: mod.rs  timeline.rs
crates/prov-cli/tests/: cli_agent_hooks_layout.rs  cli_backfill.rs  cli_codex_layout.rs  cli_notes_resolve.rs  cli_plugin_layout.rs  cli_pre_push.rs  cli_privacy.rs  cli_read.rs  cli_regenerate.rs  cli_repair.rs  cli_rewrite.rs  cli_skill_layout.rs  cli_smoke.rs  cli_sync.rs  hook_capture.rs
crates/prov-cli/tests/common/: mod.rs
crates/prov-core/: Cargo.toml
crates/prov-core/src/: git.rs  lib.rs  privacy.rs  resolver.rs  schema.rs  session.rs  time.rs  transcript.rs
crates/prov-core/src/redactor/: detectors.rs  mod.rs  provignore.rs
crates/prov-core/src/storage/: mod.rs  notes.rs  sqlite.rs  staging.rs
crates/prov-core/tests/: resolver.rs  storage.rs  transcript_parser.rs
crates/prov-core/tests/fixtures/hook-payloads/: codex-post-tool-use-apply-patch.json  codex-session-start.json  codex-stop.json  codex-user-prompt-submit.json  post-tool-use-edit.json  post-tool-use-multiedit.json  post-tool-use-write.json  session-start.json  stop.json  user-prompt-submit.json
crates/prov-core/tests/fixtures/transcripts/: basic.jsonl
docs/: dogfooding.md  follow-ups.md
docs/brainstorms/: 2026-05-10-agent-harness-agnostic-provenance-requirements.md
docs/plans/: 2026-04-28-001-feat-prompt-provenance-v1-plan.md  2026-05-07-001-refactor-unship-pr-comment-action-plan.md  2026-05-10-001-feat-agent-harness-adapters-plan.md
docs/solutions/conventions/: agent-harness-adapter-readiness-2026-05-10.md  defensive-default-polarity-conventions-2026-05-03.md  git-notes-merge-conflict-parsing-conventions-2026-05-03.md  git-subprocess-hardening-conventions-2026-05-02.md
githooks/: post-commit  post-rewrite  pre-push
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/skills/prov/: SKILL.md
plugin/skills/prov/references/: querying.md  triggers.md
plugin/skills/prov/tests/: skill_smoke.md
scripts/: check.sh
skills/prov/: SKILL.md
skills/prov/references/: triggers.md
skills/prov/tests/: skill_smoke.md
