[workspace]
resolver = "2"
members = [
    "crates/prov-core",
    "crates/prov-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mattfogel/prov"
authors = ["Matt Fogel <mattfogel@users.noreply.github.com>"]
homepage = "https://github.com/mattfogel/prov"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# CLI Args structs naturally accumulate >3 boolean flags; refactoring into enums
# adds boilerplate without clarity. Allow at workspace level.
struct_excessive_bools = "allow"
# `SQLite`, `JSON`, `BLAKE3`, `FTS5`, etc. trigger doc_markdown across the
# codebase. Backticking every initialism in prose adds noise without clarity.
doc_markdown = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
