[package]
name = "prov"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Prompt provenance for AI-generated code"
keywords = ["git", "provenance", "claude", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "prov"
path = "src/main.rs"

[dependencies]
prov-core = { path = "../prov-core", version = "0.1.0" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
