[package]
name = "prov"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Prompt provenance for AI-generated code"
keywords = ["git", "provenance", "claude", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "prov"
path = "src/main.rs"

[dependencies]
prov-core = { path = "../prov-core", version = "0.1.0" }
clap = { version = "4.5", features = ["derive", "wrap_help"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
blake3 = "1.5"
regex = "1.11"
# `prov regenerate` (U14) calls the Anthropic Messages API. rustls-tls keeps
# the static-musl release path simple; blocking matches the rest of the CLI's
# sync style. Default features are off so we don't pull in tokio.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
similar = "2.6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.13"
# Mock HTTP server for `prov regenerate` integration tests. Sync API matches
# our blocking reqwest client.
mockito = "1.5"

[lints]
workspace = true
